--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,4 +34,4 @@ jobs:
       uses: actions/upload-artifact@v1.0.0
       with:
         name: ImageQuickSave
-        path: ImageQuickSave\bin\Release\
+        path: bin\Release\
